# Action_Recognition

./: .gitignore  README.md  install.sh  pyproject.toml
data/scripts/: augment_skeletons.py  augment_videos.py  dataset_utils.py  extract_skeletons.ipynb  extract_skeletons.py  label_normalization.json  prepare_kinetics.py  prepare_penn.py  prepare_ucf.py  prepare_ucf_kinetics.py  preprocess_skeletons.py
docs/: prepare_data.md  train_pipeline.md
experiments/: api_stream_demo.ipynb  skeleton_augmentation.ipynb  streaming_inference.ipynb  train.ipynb
models/: sode.pt
reports/: dkr_blog_post.md  report_1.md  report_1_dkr.md  report_2.md  report_2_pmldl.md  report_3_pmldl.md
src/act_rec/: datasets.py  labeling.py  params.py  preprocessing.py  training.py
src/act_rec/api/: app.py  inference.py
src/act_rec/app/: app.py
src/act_rec/graph/: coco.py  tools.py
src/act_rec/model/: losses.py  modules.py  sode.py  utils.py
