[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "act-rec"
version = "0.1.0"
description = "Project of the 3rd year DS track in Innopolis University"
requires-python = ">=3.10,<3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.12.11",
    "mypy>=1.17.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["act_rec"]

[tool.setuptools.package-data]
mypackage = ["py.typed"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
follow_imports = "skip"
plugins = ["pydantic.mypy"]

[tool.ruff]
indent-width = 4
line-length = 120
respect-gitignore = true
target-version = "py310"

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "ERA", # commented-out-code
    "F", # pyflakes
    "FAST", # FastAPI
    "G", # flake8-logging-format
    "ICN", # flake8-import-conventions
    "I", # isort
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "PD003", # pandas-use-of-dot-is-null
    "PD004", # pandas-use-of-dot-not-null
    "PD007", # pandas-use-of-dot-ix
    "PD011", # pandas-use-of-dot-values
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # unnecessary-paren-on-raise-exception
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]
ignore = [
    "RUF001", # ambiguous-unicode-character-string
    "B905", # zip-without-explicit-strict
    "PD", # pandas-vet, except for selected
    "PTH123", # builtin-open
    "RET504", # unnecessary-assign
    "SIM105", # suppressible-exception
    "SIM108", # if-else-block-instead-of-if-exp
    "UP032", # f-string
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]